--- a/css/common.css
+++ b/css/common.css
@@ -12,6 +12,7 @@ a {
     text-decoration:none;
 }
 .section {
+    width: 100%;
     height: 100%;
     text-align: center;
     background-size: cover;
