--- a/css/common.css
+++ b/css/common.css
@@ -19,13 +19,13 @@ a {
 }
 .ability{
     margin: 0 auto;
-    width: 600px;
+    width: 100%;
     line-height: 100px;
     font-size: 30px;
     color: #fff;
 }
 .page-one{
-    width:600px;
+    width:100%;
     height:350px;
     /*background-color:#fff;*/
     margin: 0 auto;
