--- a/css/common.css
+++ b/css/common.css
@@ -90,7 +90,7 @@ li {
 }
 .page-two-left{
     float: left;
-    width: 630px;
+    width: 60%;
     color: #fff;
     margin: 5%;
     text-align: left;
@@ -102,7 +102,7 @@ li {
 }
 #tagsList {
     position: absolute;
-    width:600px;
+    width:40%;
     height:300px;
     margin: 3% 50%;
 }
@@ -143,7 +143,6 @@ li {
     height: 400px;
     margin: 0 auto;
     text-align: left;
-    overflow: hidden;
 }
 .page-four-body span{
     color: #fff;
@@ -178,7 +177,7 @@ li {
     float: left;
     margin-left: 5%;
     width: 40%;
-    height: 80%;
+    height: auto;
     border:1px solid #2296E8;
     border-radius: 10px;
     padding: 10px
