--- a/css/common.css
+++ b/css/common.css
@@ -167,10 +167,14 @@ li {
 }
 .page-four-body .hr hr{
     width: 98%;
-    height: 2%;
+    height: 15%;
     background-color: #2296E8;
     border-radius: 10px;
     margin-left: -1200px;
+}
+.hr{
+    width: 100%;
+    height: 20%;
 }
 .page-four-body li{
     background-color: #D3D6DB;
